Correction while et affectation mutlti